removed some code at the bottom

--- a/nonparametric_sim_two_groups2.Rmd
+++ b/nonparametric_sim_two_groups2.Rmd
@@ -10,7 +10,7 @@ output:
 
 ---
 
-This is a simple two group simulaton for PU data. 
+This is a simple two group simulation for PU data. 
 
 There are two groups, called case and control
 
@@ -97,14 +97,23 @@ case<-  list(150,100,50,25,175)
 contrl<-list(350,50,300,100,250,150,200)
 case<-  list(50,350,100,300,150,250,200)
 
-# contrl<-list(50,50,100,25,100)
-# case<-  list(50,100,50,100,25)
+ contrl<-list(50,50,100,25,100,75,100)
+ case<-  list(50,100,50,100,25,100,75)
+ 
+ contrl<-list(80,75,100,100)
+ case<-  list(80,100,100,75)
+ 
+ contrl<-list(100,90,80,70,60)
+ case<-  list(100,100,100,100,100)
+ 
+ contrl<-list(100,80,100,90,85,80)
+ case<-  list(100,100,80,90,80,80)
 
-foo<-map2(contrl,case,\(contrl,case) sim.fun(num.iter=1500
+foo<-map2(contrl,case,\(contrl,case) sim.fun(num.iter=2000
                   ,n.cases = case       #we know this
                   ,n.controls.unlabeled = contrl            #we wish new this
                   ,prop.nondetect = .1
-                  ,trt.eff = .1)) 
+                  ,trt.eff = .38)) 
 
 goo <- bind_rows(foo, .id = "column_label")  #unlists and binds rows
 
@@ -136,104 +145,6 @@ difftime(Sys.time(),now)
 ```
 
 
-Small effect size: The designs have to line up to get less bias
-with prop=.1 and eff=.1, n.iter = 1500
-bias IMPROVES as designs match up. That is pdiff gets smaller as n.nodetec gets smaller and as
-case-case goes from -35 to -5
-
-In other words, the initial design must be such that shifting non-detected positives has little impact
-that means, more cases than controls.
-
-
-```{r}
- now<-Sys.time()
-
-
-num.iter <- 15
-prop.nondetect <- 0.2
-trt.ef<-c(.38,.15,.1)
-
-foo<-map2(contrl,case,\(contrl,case) sim.fun(num.iter=num.iter
-                  ,n.cases = case       #we know this
-                  ,n.controls.unlabeled = contrl            #we wish new this
-                  ,prop.nondetect = prop.nondetect
-                  ,trt.eff = trt.ef[1])) 
-
-goo <- bind_rows(foo, .id = "column_label")  #unlists and binds rows
-
-
-zoo <- goo %>% group_by(cases=n.cases
-                        ,contrlz=n.controls.unlabeled) %>% 
-  dplyr::summarise(cntl.tru=median(n.cntl.tru)
-                   ,ndet=median(n.nondetect)
-                   ,cohen=median(cohend)
-                   ,p.pu=median(pu)
-                   ,p.tru=median(tru)
-                   ,pdiff=median(abs(pu-tru))
-                   ) 
-zoo %>% arrange(desc(pdiff)) %>% 
-  kable(caption = "pdiff large eff") %>% kable_styling(full_width = FALSE)
-zoo %>% arrange(desc(cohen)) %>% 
-  kable(caption = "cohen large eff") %>% kable_styling(full_width = FALSE)
-zoo %>% arrange(desc(ndet)) %>% 
-  kable(caption = "number non detected large eff") %>% kable_styling(full_width = FALSE)
-  
-#------------------------------------------------
-
-foo<-map2(contrl,case,\(contrl,case) sim.fun(num.iter=num.iter
-                  ,n.cases = case       #we know this
-                  ,n.controls.unlabeled = contrl            #we wish new this
-                  ,prop.nondetect = prop.nondetect
-                  ,trt.eff = trt.ef[3])) 
-
-goo <- bind_rows(foo, .id = "column_label")  #unlists and binds rows
-
-
-zoo <- goo %>% group_by(cases=n.cases
-                        ,contrlz=n.controls.unlabeled) %>% 
-  dplyr::summarise(cntl.tru=median(n.cntl.tru)
-                   ,ndet=median(n.nondetect)
-                   ,cohen=median(cohend)
-                   ,p.pu=median(pu)
-                   ,p.tru=median(tru)
-                   ,pdiff=median(abs(pu-tru))
-                   ) 
-zoo %>% arrange(desc(pdiff)) %>% 
-  kable(caption = "pdiff medium eff") %>% kable_styling(full_width = FALSE)
-zoo %>% arrange(desc(cohen)) %>% 
-  kable(caption = "cohen medium eff") %>% kable_styling(full_width = FALSE)
-zoo %>% arrange(desc(ndet)) %>% 
-  kable(caption = "number non detected medium eff") %>% kable_styling(full_width = FALSE)
-#-------------------------------------------------
-
-
-foo<-map2(contrl,case,\(contrl,case) sim.fun(num.iter=num.iter
-                  ,n.cases = case       #we know this
-                  ,n.controls.unlabeled = contrl            #we wish new this
-                  ,prop.nondetect = prop.nondetect
-                  ,trt.eff = trt.ef[3])) 
-
-goo <- bind_rows(foo, .id = "column_label")  #unlists and binds rows
-
-
-zoo <- goo %>% group_by(cases=n.cases
-                        ,contrlz=n.controls.unlabeled) %>% 
-  dplyr::summarise(cntl.tru=median(n.cntl.tru)
-                   ,ndet=median(n.nondetect)
-                   ,cohen=median(cohend)
-                   ,p.pu=median(pu)
-                   ,p.tru=median(tru)
-                   ,pdiff=median(abs(pu-tru))
-                   ) 
-zoo %>% arrange(desc(pdiff)) %>% 
-  kable(caption = "pdiff small eff") %>% kable_styling(full_width = FALSE)
-zoo %>% arrange(desc(cohen)) %>% 
-  kable(caption = "cohen small eff") %>% kable_styling(full_width = FALSE)
-zoo %>% arrange(desc(ndet)) %>% 
-  kable(caption = "number non detected small eff") %>% kable_styling(full_width = FALSE)
-
-difftime(Sys.time(),now)
-```
 
 ndet
 imbalance 
