--- a/nonparametric_sim_two_groups_pmap.Rmd
+++ b/nonparametric_sim_two_groups_pmap.Rmd
@@ -89,11 +89,11 @@ return(data.frame(n.cases=n.cases,
 
 
 parmlist<-list(
-c(rep(200,6)),             #interations; num.iter
-c(100,80,80,100,80,80), #cases; n.cases
-c(80,100,80,80,100,80), #controls PU; n.controls.unlabeled
-c(rep(0.1,6)),          #prop non detct ;prop.nondetect
-c(0.38,0.38,0.38,0.1,0.1,0.1)  #treat effect; trt.eff 
+c(rep(2500,12)),             #interations; num.iter
+c(100,80,80,100,80,80,100,80,80,100,80,80), #cases; n.cases
+c(80,100,80,80,100,80,80,100,80,80,100,80), #controls PU; n.controls.unlabeled
+c(rep(0.1,6),rep(0.05,6)),          #prop non detct ;prop.nondetect
+c(0.38,0.38,0.38,0.1,0.1,0.1,0.38,0.38,0.38,0.1,0.1,0.1)  #treat effect; trt.eff 
  )
  
 
@@ -102,7 +102,19 @@ foo<-pmap(parmlist,sim.fun)
 goo <- bind_rows(foo, .id = "column_label")  #unlists and binds rows
 
 
-zoo <- goo %>% group_by(n.cases
+zoo1 <- goo %>% group_by(n.cases
+                        ,n.controls.unlabeled
+                        ,trt.eff
+                        ,prop.nondetect) %>% 
+  dplyr::summarise(case.tru=median(n.case.tru)
+                   ,cntl.tru=median(n.cntl.tru)
+                   ,n.nodetec=median(n.nondetect)
+                   ,p.tru=median(tru)
+                   ,pdiff=median(abs(pu-tru))
+                   ) 
+
+#same as above but more output
+zoo2 <- goo %>% group_by(n.cases
                         ,n.controls.unlabeled
                         ,trt.eff
                         ,prop.nondetect) %>% 
@@ -118,7 +130,10 @@ zoo <- goo %>% group_by(n.cases
                    ,pdiff=median(abs(pu-tru))
                    ) 
 
-zoo %>% arrange(desc(pdiff)) %>% 
+zoo1 %>% arrange(pdiff) %>% 
+  kable(caption = "pdiff ") %>% kable_styling(full_width = FALSE)
+
+zoo2 %>% arrange(pdiff) %>% 
   kable(caption = "pdiff ") %>% kable_styling(full_width = FALSE)
 
 
