--- a/nonparametric_sim_two_groups_pmap.Rmd
+++ b/nonparametric_sim_two_groups_pmap.Rmd
@@ -89,15 +89,20 @@ return(data.frame(n.cases=n.cases,
 
 
 parmlist<-list(
-c(rep(20,12)),             #interations; num.iter
-c(100,80,80,100,80,80,100,80,80,100,80,80), #cases; n.cases
-c(80,100,80,80,100,80,80,100,80,80,100,80), #controls PU; n.controls.unlabeled
-c(rep(0.1,6),rep(0.05,6)),          #prop non detct ;prop.nondetect
-c(0.38,0.38,0.38,0.1,0.1,0.1,0.38,0.38,0.38,0.1,0.1,0.1)  #treat effect; trt.eff 
+c(rep(5000,16)),             #interations; num.iter
+c(100,80,80,90,100,80,80,90,100,80,80,90,100,80,80,90), #cases; n.cases
+c(80,100,80,90,80,100,80,90,80,100,80,90,80,100,80,90), #controls PU; n.controls.unlabeled
+c(rep(0.1,8),rep(0.05,8)),          #prop non detct ;prop.nondetect
+c(0.38,0.38,0.38,.38,0.1,0.1,0.1,0.1,0.38,0.38,0.38,0.38,0.1,0.1,0.1,0.1)  #treat effect; trt.eff 
  )
  
 
 foo<-pmap(parmlist,sim.fun)
+
+
+
+print(difftime(Sys.time(),now,units="mins"))
+
 
 goo <- bind_rows(foo, .id = "column_label")  #unlists and binds rows
 
@@ -133,6 +138,8 @@ zoo2 <- goo %>% group_by(n.cases
 zoo1 %>% ungroup() %>% arrange(pdiff) %>% 
   kable(caption = "pdiff ") %>% kable_styling(full_width = FALSE)
 
+
+
 zoo2 %>% ungroup()%>% arrange(pdiff) %>% 
   kable(caption = "pdiff ") %>% kable_styling(full_width = FALSE)
 
@@ -145,7 +152,7 @@ zoo2 %>% ungroup()%>% arrange(pdiff) %>%
 #   kable(caption = "p.pu ") %>% kable_styling(full_width = FALSE)
 
 oddsratio_to_d(2,log=FALSE) #this coverts OR to cohens so that I make this like SNPs data
-difftime(Sys.time(),now,units="mins")
+
 ```
 
 
