--- a/nonparametric_sim_num_agree.Rmd
+++ b/nonparametric_sim_num_agree.Rmd
@@ -107,31 +107,35 @@ return(list(n.cases=n.cases,
 # c(0.38,0.38,0.38,.38,0.1,0.1,0.1,0.1,0.38,0.38,0.38,0.38,0.1,0.1,0.1,0.1,0.38,0.38,0.38,.38,0.1,0.1,0.1,0.1,0.38,0.38,0.38,0.38,0.1,0.1,0.1,0.1) #treat effect
 #  )
  
-  parmlist<-list(
-c(rep(3000,16)),             #interations; num.iter
-c(120,60,80,90,120,60,80,90,120,60,80,90,120,60,80,90),  #cases; n.cases
-c(60,120,80,90,60,120,80,90,60,120,80,90,60,120,80,90),  #controls unlabeled
-c(rep(0.1,4),rep(0.05,4),rep(0.15,4),rep(0.01,4)),  #non-detection proportion
-c(rep(0.38,16)) #treat effect
- )
+#   parmlist<-list(
+# c(rep(3000,16)),             #interations; num.iter
+# c(120,60,80,90,120,60,80,90,120,60,80,90,120,60,80,90),  #cases; n.cases
+# c(60,120,80,90,60,120,80,90,60,120,80,90,60,120,80,90),  #controls unlabeled
+# c(rep(0.1,4),rep(0.05,4),rep(0.15,4),rep(0.01,4)),  #non-detection proportion
+# c(rep(0.38,16)) #treat effect
+#  )
 
-#  parmlist<-list(
-# c(rep(3000,4)),             #interations; num.iter
-# c(120,120,120,120),  #cases; n.cases
-# c(60,60,60,60),  #controls unlabeled
-# c(0.15,.1,.01,.05),  #non-detection proportion
-# c(0.38,0.38,0.38,0.38) #treat effect
-#  )
+ parmlist<-list(
+c(rep(3000,12)),             #interations; num.iter
+rep(c(120,80,100),4),  #cases; n.cases
+rep(c(80,120,100),4),  #controls unlabeled
+c(rep(0.15,3),rep(.1,3),rep(.01,3),rep(.05,3)), #non-detection proportion
+c(rep(0.4,12)) #treat effect
+ )
  
+  
+# ##This is to see if balance matters
 #  parmlist<-list(
-# c(rep(60,2)),             #interations; num.iter
-# c(120,120),  #cases; n.cases
-# c(60,60),  #controls unlabeled
-# c(.1,.01),  #non-detection proportion
-# c(0.38,0.38) #treat effect
+# c(rep(3000,5)),             #interations; num.iter
+# c(rep(80,5)),  #cases; n.cases
+# c(120,110,100,90,80),  #controls unlabeled
+# c(rep(0.1,5)),  #non-detection proportion
+# c(rep(0.4,5)) #treat effect
 #  )
-#  
-#  #sample size matters more than direction of error
+
+
+ 
+#####  #sample size matters more than direction of error
 #   parmlist<-list(
 # c(rep(500,6)),             #interations; num.iter
 # c(120,120,120,60,70,80),  #cases; n.cases
@@ -157,7 +161,7 @@ zoo1 <- goo %>% group_by(n.cases
                    )
 
 
-zoo1 %>% ungroup() %>% arrange(prop.nondetect,desc(both.sig)) %>% select(-p.agree) %>% 
+zoo1 %>% ungroup() %>% arrange(desc(both.sig)) %>% select(-p.agree) %>% 
   kable(caption = "both.sig") %>% kable_styling(full_width = FALSE) %>% kable_classic()
 
 # zoo1 %>% ungroup() %>% arrange(desc(p.agree)) %>%
