--- a/nonparametric_sim_num_agree.Rmd
+++ b/nonparametric_sim_num_agree.Rmd
@@ -119,8 +119,8 @@ return(list(n.cases=n.cases,
 c(rep(3000,12)),             #interations; num.iter
 rep(c(120,80,100),4),  #cases; n.cases
 rep(c(80,120,100),4),  #controls unlabeled
-c(rep(0.15,3),rep(.1,3),rep(.01,3),rep(.05,3)), #non-detection proportion
-c(rep(0.4,12)) #treat effect
+c(rep(0.1,12)), #non-detection proportion
+c(rep(0.4,3),rep(.1,3),rep(.9,3),rep(1.8,3)) #treat effect
  )
  
   
