--- a/pvalue_to_correct.Rmd
+++ b/pvalue_to_correct.Rmd
@@ -25,6 +25,8 @@ pacman::p_load(
        magrittr, # for %<>%
        effectsize,
        rstatix,
+       pander, #to write tables as simple text for cut-and-paste
+       knitr,
         kableExtra
    ) 
 ```
@@ -86,7 +88,13 @@ return(list(n.cases=n.cases,
 
 
 
-```{r}
+```{r,results='asis'}
+
+
+
+library(pander)
+
+
  now<-Sys.time()
 
 ###this parmlist has a very small effect size, which isn't interesting
@@ -115,17 +123,17 @@ return(list(n.cases=n.cases,
 # c(rep(0.4,3),rep(.1,3),rep(.9,3),rep(1.8,3)) #treat effect
 #  )
  
-  
- parmlist<-list(
-c(rep(5,3)),             #interations; num.iter
-c(120,80,100),  #cases; n.cases
-c(80,120,100),  #controls unlabeled
-c(rep(0.1,3)), #non-detection proportion
-c(rep(0.4,3)) #treat effect
- )
+###this checlks different patterns for the same sample size
+#  parmlist<-list(
+# c(rep(5000,3)),             #interations; num.iter
+# c(120,80,100),  #cases; n.cases
+# c(80,120,100),  #controls unlabeled
+# c(rep(0.05,3)), #non-detection proportion
+# c(rep(0.4,3)) #treat effect
+#  )
 
 
-# ##This is to see if balance matters
+# ##This is to see if balance matters more than sample size
 #  parmlist<-list(
 # c(rep(3000,5)),             #interations; num.iter
 # c(rep(80,5)),  #cases; n.cases
@@ -138,12 +146,15 @@ c(rep(0.4,3)) #treat effect
  
 #####  #sample size matters more than direction of error
 #   parmlist<-list(
-# c(rep(500,6)),             #interations; num.iter
+# c(rep(6000,6)),             #interations; num.iter
 # c(120,120,120,60,70,80),  #cases; n.cases
 # c(60,70,80,120,120,120),  #controls unlabeled
-# c(.05,.05,0.05,.05,.05,0.05),  #non-detection proportion
-# c(rep(.38,6)) #treat effect
+# c(rep(0.1,6)),  #non-detection proportion
+# c(rep(.4,6)) #treat effect
 #  )
+ 
+ 
+sim.table<-function(parmlist){
  
 foo<-pmap(parmlist,sim.fun)
 
@@ -161,13 +172,10 @@ zoo1 <- goo %>% group_by(n.cases
                    ,p.tru=mean(tru)
                    )
 
+return(pandoc.table(zoo1 %>% ungroup() %>% arrange(pu.less.tru)
+                    ,style='rmarkdown',digits=3,split.table=Inf))
 
-knitr::kable(zoo1 %>% ungroup() %>% arrange(pu.less.tru),"simple")
-
-
-# %>% 
-#   kable(caption = "pu < tu sorting") %>% kable_styling(full_width = FALSE) %>% kable_classic()
-
+}
 
 
 oddsratio_to_d(2,log=FALSE) #this coverts OR to cohens so that I make this like SNPs data
@@ -178,4 +186,69 @@ print(difftime(Sys.time(),now,units="mins"))
 ```
 
 
+```{r, results='asis',message=FALSE}
+###this checlks different patterns for the same sample size
+
+
+ parmlist<-list(
+c(rep(5000,3)),             #interations; num.iter
+c(120,80,100),  #cases; n.cases
+c(80,120,100),  #controls unlabeled
+c(rep(0.01,3)), #non-detection proportion
+c(rep(0.4,3)) #treat effect
+ )
+
+
+sim.table(parmlist=parmlist)
+
+
+ parmlist<-list(
+c(rep(5000,3)),             #interations; num.iter
+c(120,80,100),  #cases; n.cases
+c(80,120,100),  #controls unlabeled
+c(rep(0.05,3)), #non-detection proportion
+c(rep(0.4,3)) #treat effect
+ )
+
+
+sim.table(parmlist=parmlist)
+
+sim.table(parmlist=parmlist)
+
+
+ parmlist<-list(
+c(rep(5000,3)),             #interations; num.iter
+c(120,80,100),  #cases; n.cases
+c(80,120,100),  #controls unlabeled
+c(rep(0.1,3)), #non-detection proportion
+c(rep(0.4,3)) #treat effect
+ )
+
+
+sim.table(parmlist=parmlist)
+
+ parmlist<-list(
+c(rep(5000,3)),             #interations; num.iter
+c(120,80,100),  #cases; n.cases
+c(80,120,100),  #controls unlabeled
+c(rep(0.1,3)), #non-detection proportion
+c(rep(0.1,3)) #treat effect
+ )
+
+sim.table(parmlist=parmlist)
+
+
+parmlist<-list(
+c(rep(5000,3)),             #interations; num.iter
+c(120,80,100),  #cases; n.cases
+c(80,120,100),  #controls unlabeled
+c(rep(0.1,3)), #non-detection proportion
+c(rep(1,3)) #treat effect
+ )
+
+sim.table(parmlist=parmlist)
+
+
+
+```
 
