--- a/pvalue_to_correct.Rmd
+++ b/pvalue_to_correct.Rmd
@@ -38,22 +38,22 @@ pacman::p_load(
 
 sim.fun<-function(num.iter = NULL
                   ,n.cases = NULL    
-                  ,n.controls.unlabeled = NULL          
-                  ,prop.nondetect = NULL
-                  ,trt.eff = NULL,...){
+                  ,n.unl.cntr = NULL          
+                  ,prp.nondet = NULL
+                  ,t.eff = NULL,...){
 out1 <- NULL
 out2 <- NULL
 out3 <- NULL
 
-n.nondetect <- round(prop.nondetect*n.controls.unlabeled)
+n.nondet <- round(prp.nondet*n.unl.cntr)
 
 for (i in 1:num.iter){
 df <- data.frame(
-real.labels = c(rep(1,(n.cases+n.nondetect))
-                 ,rep(0,(n.controls.unlabeled-n.nondetect))),
-labelz = c(rep(1,n.cases),rep(0,n.controls.unlabeled)),
-dat = c(rnorm(n.cases+n.nondetect,mean=trt.eff)
-        ,rnorm((n.controls.unlabeled-n.nondetect)
+real.labels = c(rep(1,(n.cases+n.nondet))
+                 ,rep(0,(n.unl.cntr-n.nondet))),
+labelz = c(rep(1,n.cases),rep(0,n.unl.cntr)),
+dat = c(rnorm(n.cases+n.nondet,mean=t.eff)
+        ,rnorm((n.unl.cntr-n.nondet)
                        ,mean = 0)))
 
 #pu
@@ -70,12 +70,12 @@ out2 <- c(out2,wilcox_test(data=df,dat ~ real.labels)$p)
 #2=agree, both less than 0.05; 1=disgree, one of them is less; 0=agree both are above agree
 
 return(list(n.cases=n.cases,
-                  n.controls.unlabeled=n.controls.unlabeled,
-                  n.case.tru = (n.cases+n.nondetect),
-                  n.cntl.tru=(n.controls.unlabeled-n.nondetect),
-                  n.nondetect=n.nondetect,
-                  trt.eff=trt.eff,
-                  prop.nondetect=prop.nondetect,
+                  n.unl.ctrl=n.unl.cntr,
+                  n.case.tru = (n.cases+n.nondet),
+                  n.cntl.tru=(n.unl.cntr-n.nondet),
+                  n.nondet=n.nondet,
+                  t.eff=t.eff,
+                  prp.nondet=prp.nondet,
                   pu=out1,
                   tru=out2))
 }
@@ -91,69 +91,6 @@ return(list(n.cases=n.cases,
 ```{r,results='asis'}
 
 
-
-library(pander)
-
-
- now<-Sys.time()
-
-###this parmlist has a very small effect size, which isn't interesting
- 
-#  parmlist<-list(
-# c(rep(500,32)),             #interations; num.iter
-# c(120,60,80,90,120,60,80,90,120,60,80,90,120,60,80,90,120,60,80,90,120,60,80,90,120,60,80,90,120,60,80,90),  #cases; n.cases
-# c(60,120,80,90,60,120,80,90,60,120,80,90,60,120,80,90,60,120,80,90,60,120,80,90,60,120,80,90,60,120,80,90),  #controls unlabeled
-# c(rep(0.1,8),rep(0.05,8),rep(0.15,8),rep(0.01,8)),  #non-detection proportion
-# c(0.38,0.38,0.38,.38,0.1,0.1,0.1,0.1,0.38,0.38,0.38,0.38,0.1,0.1,0.1,0.1,0.38,0.38,0.38,.38,0.1,0.1,0.1,0.1,0.38,0.38,0.38,0.38,0.1,0.1,0.1,0.1) #treat effect
-#  )
- 
-#   parmlist<-list(
-# c(rep(3000,16)),             #interations; num.iter
-# c(120,60,80,90,120,60,80,90,120,60,80,90,120,60,80,90),  #cases; n.cases
-# c(60,120,80,90,60,120,80,90,60,120,80,90,60,120,80,90),  #controls unlabeled
-# c(rep(0.1,4),rep(0.05,4),rep(0.15,4),rep(0.01,4)),  #non-detection proportion
-# c(rep(0.38,16)) #treat effect
-#  )
-
-#  parmlist<-list(
-# c(rep(3000,12)),             #interations; num.iter
-# rep(c(120,80,100),4),  #cases; n.cases
-# rep(c(80,120,100),4),  #controls unlabeled
-# c(rep(0.1,12)), #non-detection proportion
-# c(rep(0.4,3),rep(.1,3),rep(.9,3),rep(1.8,3)) #treat effect
-#  )
- 
-###this checlks different patterns for the same sample size
-#  parmlist<-list(
-# c(rep(5000,3)),             #interations; num.iter
-# c(120,80,100),  #cases; n.cases
-# c(80,120,100),  #controls unlabeled
-# c(rep(0.05,3)), #non-detection proportion
-# c(rep(0.4,3)) #treat effect
-#  )
-
-
-# ##This is to see if balance matters more than sample size
-#  parmlist<-list(
-# c(rep(3000,5)),             #interations; num.iter
-# c(rep(80,5)),  #cases; n.cases
-# c(120,110,100,90,80),  #controls unlabeled
-# c(rep(0.1,5)),  #non-detection proportion
-# c(rep(0.4,5)) #treat effect
-#  )
-
-
- 
-#####  #sample size matters more than direction of error
-#   parmlist<-list(
-# c(rep(6000,6)),             #interations; num.iter
-# c(120,120,120,60,70,80),  #cases; n.cases
-# c(60,70,80,120,120,120),  #controls unlabeled
-# c(rep(0.1,6)),  #non-detection proportion
-# c(rep(.4,6)) #treat effect
-#  )
- 
- 
 sim.table<-function(parmlist){
  
 foo<-pmap(parmlist,sim.fun)
@@ -163,13 +100,14 @@ goo <- bind_rows(foo, .id = "column_label")  #unlists and binds rows
 
 
 zoo1 <- goo %>% group_by(n.cases
-                        ,n.controls.unlabeled
-                        ,trt.eff
-                        ,prop.nondetect) %>% 
-  dplyr::summarise(n.nodetec=mean(n.nondetect)
-                   ,tru.minus.pu=mean(tru-pu)
+                        ,n.unl.ctrl
+                        ,t.eff
+                        ,prp.nondet) %>% 
+  dplyr::summarise(n.nodetec=mean(n.nondet)
+                   ,pu.minus.tru=mean(pu-tru)
                    ,pu.less.tru=mean(pu<mean(tru))
                    ,p.tru=mean(tru)
+                   ,p.pu=mean(pu)
                    )
 
 return(pandoc.table(zoo1 %>% ungroup() %>% arrange(pu.less.tru)
@@ -181,17 +119,18 @@ return(pandoc.table(zoo1 %>% ungroup() %>% arrange(pu.less.tru)
 oddsratio_to_d(2,log=FALSE) #this coverts OR to cohens so that I make this like SNPs data
 d_to_oddsratio(.1)
 oddsratio_to_d(1.2,log=FALSE)
-print(difftime(Sys.time(),now,units="mins"))
+
  
 ```
-
+<!-- https://cran.r-project.org/web/packages/pander/vignettes/pandoc_table.html -->
 
 ```{r, results='asis',message=FALSE}
 ###this checlks different patterns for the same sample size
+ now<-Sys.time()
 
-
+print("different patterns for the same sample size")
  parmlist<-list(
-c(rep(5000,3)),             #interations; num.iter
+c(rep(5555,3)),             #interations; num.iter
 c(120,80,100),  #cases; n.cases
 c(80,120,100),  #controls unlabeled
 c(rep(0.01,3)), #non-detection proportion
@@ -201,9 +140,9 @@ c(rep(0.4,3)) #treat effect
 
 sim.table(parmlist=parmlist)
 
-
+print("different patterns for the same sample size")
  parmlist<-list(
-c(rep(5000,3)),             #interations; num.iter
+c(rep(5555,3)),             #interations; num.iter
 c(120,80,100),  #cases; n.cases
 c(80,120,100),  #controls unlabeled
 c(rep(0.05,3)), #non-detection proportion
@@ -213,11 +152,9 @@ c(rep(0.4,3)) #treat effect
 
 sim.table(parmlist=parmlist)
 
-sim.table(parmlist=parmlist)
-
-
+print("different patterns for the same sample size")
  parmlist<-list(
-c(rep(5000,3)),             #interations; num.iter
+c(rep(5555,3)),             #interations; num.iter
 c(120,80,100),  #cases; n.cases
 c(80,120,100),  #controls unlabeled
 c(rep(0.1,3)), #non-detection proportion
@@ -227,8 +164,10 @@ c(rep(0.4,3)) #treat effect
 
 sim.table(parmlist=parmlist)
 
+print("decreased treatment effect different patterns for the same sample size")
+
  parmlist<-list(
-c(rep(5000,3)),             #interations; num.iter
+c(rep(5555,3)),             #interations; num.iter
 c(120,80,100),  #cases; n.cases
 c(80,120,100),  #controls unlabeled
 c(rep(0.1,3)), #non-detection proportion
@@ -237,9 +176,9 @@ c(rep(0.1,3)) #treat effect
 
 sim.table(parmlist=parmlist)
 
-
+print("increased treatment effect different patterns for the same sample size")
 parmlist<-list(
-c(rep(5000,3)),             #interations; num.iter
+c(rep(5555,3)),             #interations; num.iter
 c(120,80,100),  #cases; n.cases
 c(80,120,100),  #controls unlabeled
 c(rep(0.1,3)), #non-detection proportion
@@ -249,6 +188,18 @@ c(rep(1,3)) #treat effect
 sim.table(parmlist=parmlist)
 
 
+print("different sample sizes to assess balance vs unbalanced")
+parmlist<-list(
+c(rep(5555,5)),             #interations; num.iter
+c(120,80,95,175,25),  #cases; n.cases
+c(80,120,95,25,175),  #controls unlabeled
+c(rep(0.1,5)), #non-detection proportion
+c(rep(.4,5)) #treat effect
+ )
+
+sim.table(parmlist=parmlist)
+
+print(difftime(Sys.time(),now,units="mins"))
 
 ```
 
