--- a/pvalue_to_correct.Rmd
+++ b/pvalue_to_correct.Rmd
@@ -37,6 +37,7 @@ pacman::p_load(
 ```{r,include=FALSE}
 
 sim.fun<-function(num.iter = NULL
+                  ,test=NULL
                   ,n.cases = NULL    
                   ,n.unl.cntr = NULL          
                   ,prp.nondet = NULL
@@ -56,14 +57,23 @@ dat = c(rnorm(n.cases+n.nondet,mean=t.eff)
         ,rnorm((n.unl.cntr-n.nondet)
                        ,mean = 0)))
 
+##--------------welsh's option
+if (test=="w"){
+#pu
+out1 <- c(out1,t_test(data=df,dat ~ labelz,var.equal=FALSE)$p)
+
+#tru
+out2 <- c(out2,t_test(data=df,dat ~ real.labels,var.equal=FALSE)$p)
+}
+
+##-----------non para option--------------------
+if (test=="t"){
 #pu
 out1 <- c(out1,wilcox_test(data=df,dat ~ labelz)$p)
 
 #tru
 out2 <- c(out2,wilcox_test(data=df,dat ~ real.labels)$p)
-
-
-
+}
 }
 
 #agree less than 0.05?
@@ -93,6 +103,8 @@ return(list(n.cases=n.cases,
 
 sim.table<-function(parmlist){
  
+  now<-Sys.time()
+  
 foo<-pmap(parmlist,sim.fun)
 
 
@@ -110,6 +122,7 @@ zoo1 <- goo %>% group_by(n.cases
                    ,p.pu=mean(pu)
                    )
 
+print(difftime(Sys.time(),now,units="mins"))
 return(pandoc.table(zoo1 %>% ungroup() %>% arrange(p.pu)
                     ,style='rmarkdown',digits=3,split.table=Inf))
 
@@ -131,6 +144,7 @@ oddsratio_to_d(1.2,log=FALSE)
 print("different patterns for the same sample size")
  parmlist<-list(
 c(rep(5555,3)),             #interations; num.iter
+c("t","t","t"),
 c(120,80,100),  #cases; n.cases
 c(80,120,100),  #controls unlabeled
 c(rep(0.01,3)), #non-detection proportion
@@ -143,6 +157,7 @@ sim.table(parmlist=parmlist)
 print("different patterns for the same sample size")
  parmlist<-list(
 c(rep(5555,3)),             #interations; num.iter
+c("t","t","t"),
 c(120,80,100),  #cases; n.cases
 c(80,120,100),  #controls unlabeled
 c(rep(0.05,3)), #non-detection proportion
@@ -155,6 +170,7 @@ sim.table(parmlist=parmlist)
 print("different patterns for the same sample size")
  parmlist<-list(
 c(rep(5555,3)),             #interations; num.iter
+c("t","t","t"),
 c(120,80,100),  #cases; n.cases
 c(80,120,100),  #controls unlabeled
 c(rep(0.1,3)), #non-detection proportion
@@ -168,6 +184,7 @@ print("decreased treatment effect different patterns for the same sample size")
 
  parmlist<-list(
 c(rep(5555,3)),             #interations; num.iter
+c("t","t","t"),
 c(120,80,100),  #cases; n.cases
 c(80,120,100),  #controls unlabeled
 c(rep(0.1,3)), #non-detection proportion
@@ -179,6 +196,7 @@ sim.table(parmlist=parmlist)
 print("increased treatment effect different patterns for the same sample size")
 parmlist<-list(
 c(rep(5555,3)),             #interations; num.iter
+c("t","t","t"),
 c(120,80,100),  #cases; n.cases
 c(80,120,100),  #controls unlabeled
 c(rep(0.1,3)), #non-detection proportion
@@ -190,12 +208,68 @@ sim.table(parmlist=parmlist)
 
 print("different sample sizes to assess balance vs unbalanced")
 parmlist<-list(
-c(rep(5555,5)),             #interations; num.iter
+c(rep(5555,5)),             #interations; num.ite
+c("t","t","t"),
 c(120,80,95,175,25),  #cases; n.cases
 c(80,120,95,25,175),  #controls unlabeled
 c(rep(0.1,5)), #non-detection proportion
 c(rep(.35,5)) #treat effect
  )
+
+sim.table(parmlist=parmlist)
+
+print("different designs")
+ parmlist<-list(
+c(rep(5555,3)),             #interations; num.iter
+c("t","t","t"),
+c(120,80,100),  #cases; n.cases
+c(80,120,100),  #controls unlabeled
+c(rep(0.1,3)), #non-detection proportion
+c(rep(0.4,3)) #treat effect
+ )
+
+
+sim.table(parmlist=parmlist)
+
+
+print("cut some cases???")
+ parmlist<-list(
+c(rep(5555,4)),             #interations; num.iter
+c("t","t","t","t"),
+c(175,25,25,150),  #cases; n.cases
+c(25,175,150,25),  #controls unlabeled
+c(rep(0.1,4)), #non-detection proportion
+c(rep(0.4,4)) #treat effect
+ )
+
+
+sim.table(parmlist=parmlist)
+
+
+print("sample sizes from the papers: healey (216), innes (217), conz (334), baker (392)")
+ parmlist<-list(
+c(rep(5555,4)),             #interations; num.iter
+c(rep("t",4)),      #wilcoxon tests="w", welsh="t"
+c(161,91,191,151),  #cases; n.cases
+c(55,126,143,241),  #controls unlabeled
+c(rep(0.1,4)), #non-detection proportion
+c(rep(0.4,4)) #treat effect
+ )
+
+
+sim.table(parmlist=parmlist)
+
+
+print("sample sizes from the papers: healey (216), innes (217), conz (334), baker (392)")
+ parmlist<-list(
+c(rep(5555,4)),             #interations; num.iter
+c(rep("w",4)),      #wilcoxon tests="w", welsh="t"
+c(161,91,141,121),  #cases; n.cases
+c(55,126,75,95),  #controls unlabeled
+c(rep(0.1,4)), #non-detection proportion
+c(rep(0.4,4)) #treat effect
+ )
+
 
 sim.table(parmlist=parmlist)
 
