--- a/bias.Rmd
+++ b/bias.Rmd
@@ -143,40 +143,28 @@ oddsratio_to_d(1.2,log=FALSE)
 ###this checlks different patterns for the same sample size
 
 
-print("sample sizes from the papers: healey (216), innes (217), conz (334), baker (392)")
+
+print("sample sizes from the papers: healey (216)")
  parmlist<-list(
-c(rep(1555,8)),             #interations; num.iter
-c(161,91,191,151,55,126,143,241,100,125),  #cases; n.cases
-c(55,126,143,241,161,91,191,151,100,125),  #controls unlabeled
-c(rep(0.1,10)), #non-detection proportion
-c(rep(0.5,10)) #treat effect
+c(rep(1555,4)),             #interations; num.iter
+c(161,150,108,121),  #cases; n.cases
+c(55,55,108,95),  #controls unlabeled
+c(rep(0.1,4)), #non-detection proportion
+c(rep(.5,4)) #treat effect
  )
 
 sim.table(parmlist=parmlist)
-##--------------------------------------------------------
-print("different designs")
+
+print("sample sizes from the papers: innes (217)")
  parmlist<-list(
-c(rep(5555,3)),             #interations; num.iter
-c(120,80,100),  #cases; n.cases
-c(80,120,100),  #controls unlabeled
+c(rep(1555,3)),             #interations; num.iter
+c(91,91,108),  #cases; n.cases
+c(126,116,109),  #controls unlabeled
 c(rep(0.1,3)), #non-detection proportion
-c(rep(.4,3)) #treat effect
+c(rep(0.5,3)) #treat effect
  )
- 
- sim.table(parmlist=parmlist)
- 
- print("different designs")
- parmlist<-list(
-c(rep(2555,6)),             #interations; num.iter
-c(175,25,120,80,100,95),  #cases; n.cases
-c(25,175,80,120,100,95),  #controls unlabeled
-c(rep(0.1,6)), #non-detection proportion
-c(rep(0.4,6)) #treat effect
- )
- 
- sim.table(parmlist=parmlist)
 
-
+sim.table(parmlist=parmlist)
  
  
 ```
