--- a/bias_and_power_covariate.Rmd
+++ b/bias_and_power_covariate.Rmd
@@ -40,27 +40,40 @@ pacman::p_load(
 ```{r,include=FALSE}
 
 sim.fun<-function(num.iter = NULL
-                  ,n.dogs = NULL    
+                  ,n.cases = NULL
+                  ,n.naiv.control = NULL
                   ,prp.nondet = NULL,...){
 out1 <- NULL
 out2 <- NULL
 out3 <- NULL
 out4 <- NULL
 
+n.dogs<-n.cases + n.naiv.control
+
 for (i in 1:num.iter){
 
+### calculate the observed prevalence
+# N=217 with 55 controls and 161 cases.
+# the true prevalence is (161 + (55*prop.nondect))/217
+# if prop.nondetect=0.1 then with rounding we should have 161+6 positives
+# six are mislabeled as negative.
+#how can I sample so that on average 161+6 subjects are postitive.
+#by changing the cutoff for the runif to (161+6)/217=0.77
+  
+tru.prev<-(n.cases + (n.naiv.control*prp.nondet))/n.dogs
+  
 ###sample X  and transform it
 # truth
 X <- exp(rnorm(n.dogs))
 
-trans.1<-exp(-5+2*X)
+trans.1<-exp(-5+5*X)
 
 preds<- trans.1/(1+trans.1)
 
-
+#preds<-runif(216)
 ### add random detection for affected but not yet misclassified
-
-tru.labels<- as.numeric(preds>runif(n.dogs))
+#need the average of the runif= 0.77
+tru.labels<- as.numeric(preds>runif(n.dogs,max=2*(1-tru.prev)))
 
 ### estimate coeff before misclassification (tru model)
 
@@ -75,7 +88,9 @@ tru.coeff<-m.tru$coefficients['X']
 naive.labels<- tru.labels
 
 # affected get reassigned to zero if runif<nondet prop, one if > prop. non detected
-naive.labels[tru.labels==1]<- as.numeric(runif(sum(tru.labels))>prp.nondet) # affected get reassigned to zero if runif<nondet prop, one if
+
+# a 0-1 vector, affected get reassigned to zero if runif<nondet prop, one if
+naive.labels[tru.labels==1]<- as.numeric(runif(sum(tru.labels))>prp.nondet) 
 
 ### estimate coeff naive model
 naive.dat<-data.frame(X=X,
@@ -85,17 +100,21 @@ naive.coeff<-m.naive$coefficients['X']
 
 
 
-rel.bias <- 100*(naive.coeff-tru.coeff)/abs(tru.coeff)
+#rel.bias <- 100*(naive.coeff-tru.coeff)/abs(tru.coeff)
 
-out1<- c(out1,rel.bias)
+out1<- c(out1,exp(naive.coeff))
 
-
+out2<- c(out2,sum(tru.labels))
+out3<- c(out3,sum(naive.labels))
  
 } #loop
 
-return(list(n.cases=n.dogs,
+return(list(n.cases=n.cases,
+            n.naiv.control=n.naiv.control,
                   prp.nondet=prp.nondet,
-                  bias.percent=out1))
+                  naive.or=out1,
+                  truprp=out2,
+                  navprp=out3))
 }
 
 
@@ -119,13 +138,14 @@ foo<-pmap(parmlist,sim.fun)
 goo <- bind_rows(foo, .id = "column_label")  #unlists and binds rows
 
 
-zoo1 <- goo %>% group_by(prp.nondet) %>% 
+zoo1 <- goo %>% group_by(n.cases,n.naiv.control,prp.nondet) %>% 
   dplyr::summarise(prp.nondet=mean(prp.nondet)
-                   ,mn.rel.bias=mean(bias.percent)
-                   )
+                   ,naive.or=mean(naive.or)
+                   ,truprp=mean(truprp)
+                   ,navprp=mean(navprp))
 
 print(difftime(Sys.time(),now,units="mins"))
-return(pandoc.table(zoo1 %>% ungroup() %>% arrange(desc(mn.rel.bias))
+return(pandoc.table(zoo1 %>% ungroup() %>% arrange(desc(naive.or))
                     ,style='rmarkdown',digits=3,split.table=Inf))
 
 }
@@ -144,18 +164,28 @@ oddsratio_to_d(1.2,log=FALSE)
 
 
 
-print("sample sizes from the papers: healey (216)")
+# print("sample sizes from the papers: healey (216)")
+#  parmlist<-list(
+# c(rep(200,4)),             #interations; num.iter
+# c(161,161,161,161),   #n.dogs
+# c(55,55,55,55),   #n.dogs
+# c(.01,.05,.1,.2) #non-detection proportion
+# 
+#  )
+# 
+# sim.table(parmlist=parmlist)
+
+
+ print("sample sizes from the papers: healey (216)")
  parmlist<-list(
-c(rep(55,4)),             #interations; num.iter
-c(161,150,108,121),   #n.dogs
-c(.01,.05,.1,.2) #non-detection proportion
+c(rep(500,3)),             #interations; num.iter
+c(150,50,100),   #n.cases
+c(50,150,100),   #n.control
+c(rep(0.1,3)) #non-detection proportion
 
  )
 
 sim.table(parmlist=parmlist)
-
-
- 
 
 ```
 
